--- a/public/about/index.html
+++ b/public/about/index.html
@@ -90,7 +90,7 @@
   
   <h2>What&#8217;s my story?</h2>
 
-<p>I&#8217;m Peter Schaadt, a 22 year-old Sunnyvale native. After graduating from Bellarmine College Prep in San Jose, I left Silicon Valley for the East Coast to pursue a degree in Computer Science at the University of Virginia in Charlottesville. At school I&#8217;ve been involved in club water polo, the Business Ethics Society, and taking names at the ping pong table in the rec room. I&#8217;ve had the joy of working at QuoteWizard in Seattle as a web development/QA intern as well as at Leftronic (YC S10) where I worked on Django development, graphical Javascript widgets and maintaining client APIs.</p>
+<p>I&#8217;m Peter Schaadt, a 22 year-old Sunnyvale native. After graduating from Bellarmine College Prep in San Jose, I left Silicon Valley for the East Coast to pursue a degree in Computer Science at the University of Virginia in Charlottesville. At school I&#8217;ve been involved in club water polo, the Business Ethics Society, and taking names at the ping pong table in the rec room. I&#8217;ve had the joy of working at QuoteWizard in Seattle as a web development/QA intern as well as at Leftronic (YC S10) where I worked on Django development, graphical Javascript widgets and maintained client APIs.</p>
 
 <h2>What do I do?</h2>
 
