Added generated public files.

--- a/public/index.html
+++ b/public/index.html
@@ -420,7 +420,7 @@ For managing movies and TV shows, you just can&#8217;t beat XBMC. It fetches bac
 
 <p>This blog was built using Octopress, a Jekyll framework, and will be hosted on Heroku. I&#8217;ve found it an annoyance to maintain Wordpress and a database and I&#8217;ve decided the portable solution that Jekyll provides is best for my purposes. Additionally, you can view this blog&#8217;s source code repository on <a href="https://github.com/peterfschaadt/my-blog">Github</a>.</p>
 
-<p>Be sure to check back frequently for updates (subscription feature hopefully coming soon). Feel free to <a href="mailto:peter.schaadt@gmail.com">contact me</a> if you have any questions or suggestions!</p>
+<p>Be sure to check back frequently for updates (subscription feature hopefully coming soon). Feel free to <a href="/contact">contact me</a> if you have any questions or suggestions!</p>
 </div>
   
   
