Adding generated public files.

--- a/public/resume/index.html
+++ b/public/resume/index.html
@@ -108,14 +108,14 @@ QuoteWizard, Seattle, WA 98104<br>
 &nbsp;&nbsp;&nbsp;&nbsp;debugging, composed SQL reports, version control ticket support<br>
 Leftronic, San Francisco, CA 94107<br>
 ​&nbsp;&nbsp;&nbsp;&nbsp;Software Development Intern (August 2011 – February 2012)<br>
-​&nbsp;&nbsp;&nbsp;&nbsp;<em>Duties</em>: Back-end Python development, coded real-time graphical widgets in Javascript, <br>
+​&nbsp;&nbsp;&nbsp;&nbsp;<em>Duties</em>: Back-end Python development, coded real-time graphical widgets in JavaScript, <br>
 &nbsp;&nbsp;&nbsp;&nbsp;AWS server administration, maintained API packages in four languages, provided developers <br>
-&nbsp;&nbsp;&nbsp;&nbsp;API support on Github, released Python packages and Ruby gems</p>
+&nbsp;&nbsp;&nbsp;&nbsp;API support on GitHub, released Python packages and Ruby gems</p>
 
 <h3>Technical Skills</h3>
 
 <p>​<em>Operating Systems</em>: Mac OS X 10.8, Linux Ubuntu 12.04, Windows 7<br>
-<em>​Languages</em>: Python, Javascript, Java, Ruby, HTML5, CSS3<br>
+<em>​Languages</em>: Python, JavaScript, Java, Ruby, HTML5, CSS3<br>
 ​<em>Databases</em>: MySQL, PostgreSQL, MongoDB<br>
 <em>​Web Development</em>: Django, Ruby on Rails, jQuery, Backbone.js, Raphael.js, Bootstrap<br>
 ​<em>Software</em>: Microsoft Office Suite, Adobe Photoshop, Git, Sequel Pro, Microsoft
